Update Cmake infra to run HIP CXX tests using top-level cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -232,6 +232,10 @@ if(FLASHINFER_ENABLE_HIP)
 
 endif()
 
+if(FLASHINFER_UNITTESTS)
+  enable_testing()
+endif()
+
 # Add library subdirectories
 add_subdirectory(libflashinfer)
 
