--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ flashinfer/__config__.py
 flashinfer/jit/aot_config.py
 src/generated/
 csrc/aot_default_additional_params.h
+*.out
 
 # DS_Store files
 .DS_store
