Require v9.2 of setuptools_scm (#74)
Updates the setuptools_scm version requirement under the build_requires
section of pyproject.toml to support local versionin g(e.g. v0.2.5+rocm)
in tag names.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ requires = [
     "setuptools_scm>=8.0.0",
     "torch >= 2.6",
     "numpy",
+    "setuptools-scm >=9.2"
 ]
 build-backend = "scikit_build_core.build"
 
