--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ flashinfer/__config__.py
 flashinfer/jit/aot_config.py
 src/generated/
 csrc/aot_default_additional_params.h
+*.out
 
 # DS_Store files
 .DS_store
@@ -187,3 +188,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+*.csv
+*.pkl
