--- a/docker/Dockerfile.rocm_ci
+++ b/docker/Dockerfile.rocm_ci
@@ -35,6 +35,9 @@ RUN /bin/bash -c "eval \"\$(~/.local/bin/micromamba shell hook --shell bash)\" &
     FLASHINFER_HIP_ARCHITECTURES=${GFX_ARCH} FLASHINFER_AOT_TORCH_EXTS=ON python -m pip wheel . --wheel-dir=./dist/ --no-deps --no-build-isolation -v 2>&1 | tee build_log_aot_whl.log && \
     pip install dist/flashinfer-*.whl"
 
+RUN echo "source ~/.local/bin/micromamba shell hook --shell bash" >> ~/.bashrc && \
+    echo "micromamba activate ${MAMBA_ENV_NAME}" >> ~/.bashrc
+
 # ---------------------------------------------
 # Stage 2: Build Test Dependencies - For CI
 # ---------------------------------------------
