Update CMake infra to run HIP CXX tests using top-level cmake (#10)
The PR changes how the HIP C++ tests in `libflashinfer/tests/hip` are executed. 

- The CMake infrastructure for the testing is now fully integrated with the project-level CMake.
- Since upstream has removed CUDA C++ unit tests, I went ahead and removed the CUDA configuration path from `libflashinfer/tests/CMakeLists.txt`. 
- Replaced `FetchContent` with `find_package` for discovering the `gtest` CMake package.
- Made AOT kernel source generation contingent on `FLASHINFER_BUILD_KERNELS` CMake flag and removed the kernel generation dependency on C++ unit tests. The HIP unit tests do not require AOT kernels to be generated.
- ~Now all new C++ HIP unit tests can be added using the `configure_flashinfer_target` function.~ Tests now are automatically configured once added to the `tests/hip` directory and require no changes to the CMakeLists.txt
- The PR also makes `FLASHINFER_ENABLE_HIP` the default from `FLASHINFER_ENABLE_CUDA`.
- Remove `-Wextra`

Usage after the changes.

```bash
mkdir build && cd build
cmake -DFLASHINFER_ENABLE_HIP=ON -DFLASHINFER_UNITTESTS=ON  -GNinja ..
ninja build_tests
ctest --progress --output-on-failure -j12
```

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,6 @@ set(CMAKE_SKIP_INSTALL_RPATH FALSE)
 # Compiler flags - defined as lists for cleaner management
 set(WARNING_FLAGS
     "-Wall"
-    "-Wextra"
     "-Winit-self"
     "-Wno-switch-bool"
     "-Wunused-function"
@@ -230,6 +229,10 @@ if(FLASHINFER_ENABLE_HIP)
       "gfx942"
       CACHE STRING "HIP architectures for all targets" FORCE)
 
+endif()
+
+if(FLASHINFER_UNITTESTS)
+  enable_testing()
 endif()
 
 # Add library subdirectories
