Enable AOT Installation for Prefill (#21)
This PR adds the necessary infrastructure changes for enabling AOT
installation of the Prefill kernel. The changes are localized to
`aot_build_utils` and `flashinfer/csrc`.

---------

Signed-off-by: Debasis Mandal <Debasis.Mandal@amd.com>
Co-authored-by: Debasis Mandal <Debasis.Mandal@amd.com>

--- a/libflashinfer/CMakeLists.txt
+++ b/libflashinfer/CMakeLists.txt
@@ -103,13 +103,20 @@ if(FLASHINFER_BUILD_KERNELS)
   set(FLASHINFER_KERNEL_TARGETS "")
 
   add_library(decode_kernels STATIC ${DECODE_KERNELS_SRCS})
+  add_library(prefill_kernels STATIC ${PREFILL_KERNELS_SRCS})
+
   add_library(flashinfer::decode_kernels ALIAS decode_kernels)
+  add_library(flashinfer::prefill_kernels ALIAS prefill_kernels)
+
   target_include_directories(decode_kernels PRIVATE ${FLASHINFER_INCLUDE_DIR})
+  target_include_directories(prefill_kernels PRIVATE ${FLASHINFER_INCLUDE_DIR})
+
   if(FLASHINFER_GEN_USE_FP16_QK_REDUCTIONS)
     target_link_libraries(decode_kernels PRIVATE Boost::math)
+    target_link_libraries(prefill_kernels PRIVATE Boost::math)
   endif()
 
-  list(APPEND FLASHINFER_KERNEL_TARGETS decode_kernels)
+  list(APPEND FLASHINFER_KERNEL_TARGETS decode_kernels prefill_kernels)
 
   # NOTE: The prefill_kernels is not yet supported on HIP
   if(FLASHINFER_ENABLE_CUDA)
@@ -125,8 +132,11 @@ if(FLASHINFER_BUILD_KERNELS)
 
   if(FLASHINFER_ENABLE_HIP)
     set_source_files_properties(${DECODE_KERNELS_SRCS} PROPERTIES LANGUAGE HIP)
+    set_source_files_properties(${PREFILL_KERNELS_SRCS} PROPERTIES LANGUAGE HIP)
     foreach(flag ${FLASHINFER_HIPCC_FLAGS})
       target_compile_options(decode_kernels
+                             PRIVATE $<$<COMPILE_LANGUAGE:HIP>:${flag}>)
+      target_compile_options(prefill_kernels
                              PRIVATE $<$<COMPILE_LANGUAGE:HIP>:${flag}>)
     endforeach()
   endif()
