Fix SPDX headers for AMD authored files
- Fixed the SPDX headers to be properly formatted for all AMD developed
  sources.
- Added a reuse pre-commit hook to check the SPDX header for these
  sources in the future.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -59,3 +59,12 @@ repos:
     hooks:
       - id: cmake-format
         additional_dependencies: [pyyaml>=5.1]
+  # REUSE compliance check for specific directories only
+  - repo: local
+    hooks:
+      - id: reuse-selective
+        name: reuse (selective files)
+        entry: ./scripts/reuse-check-selective.sh
+        language: system
+        files: ^(libflashinfer/include/flashinfer/attention/generic/|libflashinfer/include/gpu_iface/).*\.(cuh|hpp|h)$
+        pass_filenames: true
