--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,8 +52,14 @@ repos:
     # Ruff version.
     rev: v0.12.8
     hooks:
-      # Run the linter.
-      - id: ruff-check
-      # Run the formatter.
-      - id: ruff-format
-        types_or: [ python, pyi ]
+      - id: cmake-format
+        additional_dependencies: [pyyaml>=5.1]
+  # REUSE compliance check for specific directories only
+  - repo: local
+    hooks:
+      - id: reuse-selective
+        name: reuse (selective files)
+        entry: ./scripts/reuse-check-selective.sh
+        language: system
+        files: ^(libflashinfer/include/flashinfer/attention/generic/|libflashinfer/include/gpu_iface/).*\.(cuh|hpp|h)$
+        pass_filenames: true
