--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,9 +88,9 @@ FLASHINFER_BUILD_WHEELS="ON"
 FLASHINFER_AOT_TORCH_EXTS = {env="FLASHINFER_AOT_TORCH_EXTS", default="OFF"}
 FLASHINFER_ENABLE_F16="ON"
 FLASHINFER_ENABLE_BF16="ON"
-FLASHINFER_ENABLE_FP8="OFF"
-FLASHINFER_ENABLE_FP8_E4M3="OFF"
-FLASHINFER_ENABLE_FP8_E5M2="OFF"
+FLASHINFER_ENABLE_FP8="ON"
+FLASHINFER_ENABLE_FP8_E4M3="ON"
+FLASHINFER_ENABLE_FP8_E5M2="ON"
 FLASHINFER_ENABLE_CUDA = {env="FLASHINFER_ENABLE_CUDA", default="OFF"}
 FLASHINFER_ENABLE_HIP = {env="FLASHINFER_ENABLE_HIP", default="ON"}
 
