Revert tar changes from Dockerfile (#68)
This PR reverses the tar changes introduced in #67

--- a/docker/Dockerfile.rocm_ci
+++ b/docker/Dockerfile.rocm_ci
@@ -20,9 +20,9 @@ ARG MAMBA_ENV_NAME=flashinfer-py${PY_VERSION}-torch${TORCH_VERSION}-rocm${ROCM_V
 # RUN apt-get install cmake
 WORKDIR /root/
 
-COPY flashinfer.tar /root/
-RUN cd /root/ && mkdir flashinfer && tar -xvf flashinfer.tar -C flashinfer/ && \
-curl -L micro.mamba.pm/install.sh | bash && \
+COPY . /root/flashinfer/
+
+RUN curl -L micro.mamba.pm/install.sh | bash && \
 ~/.local/bin/micromamba create -n ${MAMBA_ENV_NAME} python=${PY_VERSION} cmake ninja pybind11 -c conda-forge --override-channels -y && \
 ~/.local/bin/micromamba run -n ${MAMBA_ENV_NAME} pip install ninja scikit-build-core setuptools-scm numpy pytest && \
 ~/.local/bin/micromamba run -n ${MAMBA_ENV_NAME} pip install torch==${TORCH_VERSION} -f https://repo.radeon.com/rocm/manylinux/rocm-rel-${ROCM_VERSION}/ && \
