pytest Configuration Improvements for ROCm/HIP Testing (#65)
This PR adds comprehensive pytest configuration to `pyproject.toml` and
fixes import paths in HIP tests to improve the testing experience for
ROCm/HIP development.

- **Suppress deprecation warnings**: Added `filterwarnings =
["ignore::DeprecationWarning"]` to reduce noise during test runs
- **Verbose output by default**: Added `addopts = "-v"` for better test
visibility
- **HIP test collection**: Added `testpaths` listing 10 HIP-specific
test files that run by default when executing `pytest` with no
arguments:
  - `test_batch_decode_kernels_hip_fp8.py`
  - `test_batch_decode_kernels_hip.py`
  - `test_batch_decode_vllm.py`
  - `test_logits_cap_hip.py`
  - `test_non_contiguous_decode_hip.py`
  - `test_norm_hip.py`
  - `test_page.py`
  - `test_rope.py`
  - `test_single_prefill_kernels_hip.py`
  - `test_sliding_window_hip.py`
- **Test discovery patterns**: Explicitly configured `python_classes =
["Test*"]` and `python_functions = ["test_*"]`

- Added `[tool.coverage.run]` section:
- `source = ["flashinfer"]` - track coverage only for flashinfer package
  - `branch = true` - enable branch coverage
- Added `[tool.coverage.report]` section:
  - `show_missing = true` - display line numbers of uncovered code
  - `skip_empty = true` - omit empty files from reports
  - `precision = 2` - two decimal places for percentages
- Added `[tool.coverage.html]` section:
  - `directory = "htmlcov"` - output location for HTML reports

- Changed import from `from tests.attention_reference import
naive_attention` to `from attention_reference import naive_attention`
- This fixes compatibility with non-editable pip installations where the
`tests` module isn't on the Python path

- Removed hardcoded test file list since `testpaths` in `pyproject.toml`
now handles this

Run all HIP tests with default configuration:
```bash
pytest
```
Fixes #66

---------

Co-authored-by: Debasis Mandal <Debasis.Mandal@amd.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -168,8 +168,40 @@ ignore = [
     "B020",
     # Return te negated condition directly
     "SIM103",
-    # Function definition does not bind loop variable
-    "B023",
 ]
-[tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401"]
+
+
+[tool.pytest.ini_options]
+# Ignore deprecation warnings
+filterwarnings = [
+    "ignore::DeprecationWarning",
+]
+# Verbose output
+addopts = "-v"
+# HIP-specific test files - running 'pytest' with no args runs only these
+testpaths = [
+    "tests/test_batch_decode_kernels_hip_fp8.py",
+    "tests/test_batch_decode_kernels_hip.py",
+    "tests/test_batch_decode_vllm.py",
+    "tests/test_logits_cap_hip.py",
+    "tests/test_non_contiguous_decode_hip.py",
+    "tests/test_norm_hip.py",
+    "tests/test_page.py",
+    "tests/test_rope.py",
+    "tests/test_single_prefill_kernels_hip.py",
+    "tests/test_sliding_window_hip.py",
+]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+
+[tool.coverage.run]
+source = ["flashinfer"]
+branch = true
+
+[tool.coverage.report]
+show_missing = true
+skip_empty = true
+precision = 2
+
+[tool.coverage.html]
+directory = "htmlcov"
