--- a/docker/Dockerfile.rocm_ci
+++ b/docker/Dockerfile.rocm_ci
@@ -12,10 +12,13 @@ FROM rocm/dev-ubuntu-${UBUNTU_VERSION}:${ROCM_VERSION}-complete AS flashinfer_ba
 ARG ROCM_VERSION
 ARG PY_VERSION
 ARG TORCH_VERSION
-
 ARG GFX_ARCH=gfx942
-
 ARG MAMBA_ENV_NAME=flashinfer-py${PY_VERSION}-torch${TORCH_VERSION}-rocm${ROCM_VERSION}
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    git \
+    libstdc++-14-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /root/
 
