--- a/docker/Dockerfile.rocm_ci
+++ b/docker/Dockerfile.rocm_ci
@@ -13,7 +13,7 @@ ARG ROCM_VERSION
 ARG PY_VERSION
 ARG TORCH_VERSION
 ARG GFX_ARCH=gfx942
-ARG MAMBA_ENV_NAME=flashinfer-py${PY_VERSION}-torch${TORCH_VERSION}-rocm${ROCM_VERSION}
+ARG MAMBA_ENV_NAME=flashinfer-rocm-env
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
@@ -28,7 +28,7 @@ RUN curl -L micro.mamba.pm/install.sh | bash && \
     ~/.local/bin/micromamba create -n ${MAMBA_ENV_NAME} python=${PY_VERSION} cmake ninja pybind11 -c conda-forge --override-channels -y && \
     ~/.local/bin/micromamba run -n ${MAMBA_ENV_NAME} pip install ninja scikit-build-core setuptools-scm numpy pytest && \
     ~/.local/bin/micromamba run -n ${MAMBA_ENV_NAME} pip install torch==${TORCH_VERSION} -f https://repo.radeon.com/rocm/manylinux/rocm-rel-${ROCM_VERSION}/ && \
-    /bin/bash -c "eval \"\$(/root/.local/bin/micromamba shell hook --shell bash)\" && \
+    /bin/bash -c "eval \"\$(~/.local/bin/micromamba shell hook --shell bash)\" && \
     micromamba activate ${MAMBA_ENV_NAME} && \
     cd /root/flashinfer/ && \
     FLASHINFER_HIP_ARCHITECTURES=${GFX_ARCH} python -m pip wheel . --wheel-dir=./dist/ --no-deps --no-build-isolation -v && \
