Remove verbose CMake installation messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.26.1)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
+set(CMAKE_INSTALL_MESSAGE NEVER)
 
 # Load CMake modules and utilities
 set(CMAKE_MODULE_PATH
