--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@
 name = "amd-flashinfer"
 dynamic = ["version"]
 description = "Fast Attention Algorithms for LLM Inference on ROCm"
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 readme = "README.md"
 license = "Apache-2.0"
 authors = [
@@ -19,7 +19,7 @@ authors = [
 #   pip install torch==2.7.1 --index-url https://repo.radeon.com/rocm/manylinux/rocm-rel-6.4/
 # See README.md for complete installation instructions.
 dependencies = [
-    "numpy>=1.20",
+    "ninja",
 ]
 
 classifiers = [
@@ -62,9 +62,9 @@ logging.level = "INFO"
 build-dir = "_skbuild"
 experimental = true
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
-wheel.py-api = "cp312"
 wheel.license-files = ["LICENSE"]
 wheel.packages = ["flashinfer"]
+wheel.py-api = "py3"
 
 [tool.scikit-build.sdist]
 cmake = false
@@ -104,7 +104,10 @@ include = [
 
 # Base CMake definitions - applied to all builds
 [tool.scikit-build.cmake.define]
+FLASHINFER_CUTLASS_DIR = {env="FLASHINFER_CUTLASS_DIR", default="3rdparty/cutlass"}
+FLASHINFER_CUDA_ARCHITECTURES = {env="FLASHINFER_CUDA_ARCHITECTURES", default="80"}
 FLASHINFER_HIP_ARCHITECTURES = {env="FLASHINFER_HIP_ARCHITECTURES", default="gfx942"}
+TORCH_CUDA_ARCH_LIST = "8.0"
 FLASHINFER_BUILD_WHEELS="ON"
 FLASHINFER_AOT_TORCH_EXTS = {env="FLASHINFER_AOT_TORCH_EXTS", default="OFF"}
 FLASHINFER_ENABLE_F16="ON"
@@ -112,14 +115,13 @@ FLASHINFER_ENABLE_BF16="ON"
 FLASHINFER_ENABLE_FP8="ON"
 FLASHINFER_ENABLE_FP8_E4M3="ON"
 FLASHINFER_ENABLE_FP8_E5M2="ON"
+FLASHINFER_ENABLE_CUDA = {env="FLASHINFER_ENABLE_CUDA", default="OFF"}
 FLASHINFER_ENABLE_HIP = {env="FLASHINFER_ENABLE_HIP", default="ON"}
 
 [tool.setuptools_scm]
 write_to = "flashinfer/_version.py"
-tag_regex = "^v?(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)(?:[+](?P<local>[a-zA-Z0-9.]+))?$"
-version_scheme = "no-guess-dev"
-local_scheme = "dirty-tag"
-scm.git.describe_command = ["python", "scripts/git_describe_rocm.py"]
+version_scheme = "post-release"
+local_scheme = "no-local-version"
 fallback_version = "0.0.0"
 
 [tool.codespell]
