--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ exclude = [
     "3rdparty/nvbench/**/*",
     "3rdparty/spdlog/**/*",
     "3rdparty/composable_kernels/**/*",
+    "3rdparty/cutlass/**/*",
     "ci",
     "aot_build_utils",
     "Jenkinsfile",
@@ -113,9 +114,10 @@ FLASHINFER_ENABLE_HIP = {env="FLASHINFER_ENABLE_HIP", default="ON"}
 
 [tool.setuptools_scm]
 write_to = "flashinfer/_version.py"
-version_scheme = "post-release"
-local_scheme = "no-local-version"
-fallback_version = "0.0.0"
+tag_regex = "^v?(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)(?:[+](?P<local>[a-zA-Z0-9.]+))?$"
+version_scheme = "no-guess-dev"
+local_scheme = "dirty-tag"
+scm.git.describe_command = ["python", "scripts/git_describe_rocm.py"]
 
 [tool.codespell]
 ignore-words-list = "3nd"
